<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:boxStrokeColor="@color/box_stroke_color"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/purple_primary"
        android:textColor="@color/text_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/purple_primary"
        android:textColor="@color/text_primary"
        app:boxStrokeColor="@color/box_stroke_color"
        android:textColorHint="@color/text_secondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:backgroundTint="@color/purple_primary"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/purple_primary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:strokeColor="@color/purple_primary" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/dividerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="ou"
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignInButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:text="Fazer login com o Google"
        android:textAllCaps="false"
        android:textColor="@color/text_secondary"
        app:cornerRadius="28dp" app:icon="@drawable/ic_google_g_logo"
        app:iconPadding="16dp"
        app:iconTint="@null" app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintTop_toBottomOf="@id/dividerTextView"
        app:strokeColor="#E0E0E0" />
</androidx.constraintlayout.widget.ConstraintLayout>