...
                app:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/activePromotionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_promotions"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
...
